--- a/scss/pages/_categories.scss
+++ b/scss/pages/_categories.scss
@@ -13,6 +13,10 @@
             display: flex;
             align-items: center;
             gap: 1rem;
+
+            form {
+                width: 100%;
+            }
         }
 
         select {
