--- a/scss/responsives/_tablet.scss
+++ b/scss/responsives/_tablet.scss
@@ -280,10 +280,15 @@
                 width: 100%;
             }
 
-            &-group {
+            .group-3 {
                 width: 100%;
                 display: grid;
                 grid-template-columns: repeat(3, 1fr);
+            }
+            .group-2 {
+                width: 100%;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
             }
         }
 
